--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ bin/Win64/plugins/lng/obj
 /bin/Win32/plugins/EXE/cports/IPNetInfo.cfg
 /bin/Win64/plugins/EXE/cports/IPNetInfo.cfg
 /modules/Vcl.Forms.pas
+/modules/Vcl.Graphics.pas
