--- a/bin/Win32/PBox.ini
+++ b/bin/Win32/PBox.ini
@@ -51,4 +51,5 @@ plugins\EXE\Spy++\spyxx.exe=程序员工具;Spy++;;Microsoft Spy++ - [Windows 1];
 plugins\EXE\vlc\vlc.exe=多媒体工具;VLC;Qt5QWindowIcon;VLC media player;
 plugins\EXE\Hedit\HEdit.exe=文本编辑;HEdit;;无标题 - HEdit;
 plugins\EXE\cports\cports.exe=网络管理;cports;CurrPorts;CurrPorts;
+plugins\EXE\UninstallView\UninstallView.exe=系统管理;UninstallView;UninstallView;UninstallView;
 
