--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ bin/Win64/plugins/lng/obj
 /bin/Win64/plugins/EXE/cports/IPNetInfo.cfg
 /modules/Vcl.Forms.pas
 /modules/Vcl.Graphics.pas
+/bin/Win32/plugins/EXE/uninstallview/UninstallView.cfg
+/bin/Win64/plugins/EXE/uninstallview/UninstallView.cfg
