--- a/bin/Win64/PBox.ini
+++ b/bin/Win64/PBox.ini
@@ -49,7 +49,7 @@ cmd.exe=系统管理;DOS命令行;ConsoleWindowClass;管理员: C:\Windows\System32\cmd.ex
 mspaint.exe=图形图像;画图板(EXE);MSPaintApp;无标题 - 画图;
 regedit.exe=系统管理;注册表编辑器;RegEdit_RegEdit;注册表编辑器;
 plugins\EXE\Foxit Reader\Foxit Reader.exe=文本编辑;福昕阅读器;classFoxitReader;
-plugins\EXE\Spy++\spyxx.exe=程序员工具;Spy++;;Microsoft Spy++ - [Windows 1];
+plugins\EXE\Spy++\spyxx_amd64.exe=程序员工具;Spy++;;Microsoft Spy++ - [Windows 1];
 plugins\EXE\vlc\vlc.exe=多媒体工具;VLC;Qt5QWindowIcon;VLC media player;
 plugins\EXE\Hedit\HEdit.exe=文本编辑;HEdit;;无标题 - HEdit;
 plugins\EXE\cports\cports.exe=网络管理;cports;CurrPorts;CurrPorts;
