--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,4 @@ bin/Win64/plugins/lng/obj
 /bin/Win64/plugins/EXE/HeidiSQL/Snippets
 /bin/Win64/plugins/SDK/OpenCV/4.6.0/bin/opencv_cudaarithm460.dll
 /bin/Win64/plugins/SDK/OpenCV/4.6.0/bin/opencv_cudafilters460.dll
-db
+/src/db
