add module dbVideoSDK

--- a/bin/Win64/PBox.ini
+++ b/bin/Win64/PBox.ini
@@ -42,6 +42,7 @@ Order=系统管理;文本编辑;图形图像;网络管理;程序员工具;多媒体工具
 文件管理_ICON=083-browser_show.ICO
 程序员工具_Delphi Call Java_ICON=java.ico
 程序员工具_JavaCV_ICON=java.ico
+多媒体工具_dbVideo_ICON=vsdk.ico
 
 [EXE]
 notepad.exe=文本编辑;记事本(EXE);Notepad;无标题 - 记事本;
