--- a/bin/Win32/PBox.ini
+++ b/bin/Win32/PBox.ini
@@ -43,7 +43,8 @@ Order=系统管理;文本编辑;图形图像;网络管理;程序员工具;文件管理;多媒体工具
 程序员工具_Delphi Call Java_ICON=java.ico
 程序员工具_JavaCV_ICON=java.ico
 多媒体工具_dbVideo_ICON=vsdk.ico
-多媒体工具=VLC;MPC-BE(DLL);dbVideo
+多媒体工具=VLC;MPC-BE(DLL);"dbVideo (Delphi)"
+多媒体工具_dbVideo (Delphi)_ICON=vsdk.ico
 
 [EXE]
 notepad.exe=文本编辑;记事本(EXE);Notepad;无标题 - 记事本;
