--- a/bin/Win32/PBox.ini
+++ b/bin/Win32/PBox.ini
@@ -45,6 +45,7 @@ Order=系统管理;文本编辑;图形图像;网络管理;程序员工具;文件管理;多媒体工具
 多媒体工具_dbVideo_ICON=vsdk.ico
 多媒体工具=VLC;MPC-BE(DLL);"dbVideo (Delphi)"
 多媒体工具_dbVideo (Delphi)_ICON=vsdk.ico
+系统管理_系统环境变量_ICON=Options.ico
 
 [EXE]
 notepad.exe=文本编辑;记事本(EXE);Notepad;无标题 - 记事本;
